--- a/app/views/bars/_show.html.erb
+++ b/app/views/bars/_show.html.erb
@@ -1,8 +1,5 @@
-<div class="container-match-show">
-  <div>
-    <h4><%= @bar[0].name %></h4>
-  </div>
-<div id="map" style="width: 100%; height: 600px;"></div>
+
+<div id="map" style="width: 95%; height: 30vh; margin-top: 5px; margin-bottom: 20px;"></div>
 
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
@@ -19,4 +16,4 @@
     });
   <% end %>
 <% end %>
-</div>
+
