same logo on all pages

--- a/app/views/matches/no_matches.html.erb
+++ b/app/views/matches/no_matches.html.erb
@@ -31,8 +31,9 @@
       text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
     }
 
-    img{
+    .no-matches{
       height:70px;
+      padding-bottom: 10px;
     }
 
     body {
@@ -46,7 +47,7 @@
   <!-- This file lives in public/404.html -->
   <div class="container container-banner">
     <div class="content-banner">
-      <img src="https://img15.hostingpics.net/pics/111424lovifylogo.png">
+      <img src="https://img15.hostingpics.net/pics/427830lovifyspace.png" class="no-matches">
       <br/><h4 style="font-weight: lighter;">No profiles left <i class="fa fa-frown-o" aria-hidden="true"></i></h4>
       <h5 style="font-weight: lighter;">Come back in a while to see if we've found someone new for you!</h5>
       <br/><a href = "/">Back to home page</a>
