final footer hom

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,14 +43,13 @@
 
 <div class="footer footer-home">
   <div class="footer-links">
-    <a href="https://github.com/ldeld/"><i class="fa fa-github"></i></a>
-    <a href="https://www.instagram.com/lenarw"><i class="fa fa-instagram"></i></a>
+    <a href="https://www.spotify.com/"><i class="fa fa-spotify" aria-hidden="true"></i></a>
+    <a href="https://github.com/ldeld/lovify"><i class="fa fa-github"></i></a>
     <a href="https://fr-fr.facebook.com/lewagonlyon/"><i class="fa fa-facebook"></i></a>
-    <a href="https://twitter.com/kuewl_"><i class="fa fa-twitter"></i></a>
-    <a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
+    <a href="https://twitter.com/lewagonlyon"><i class="fa fa-twitter"></i></a>
   </div>
   <div class="footer-copyright">
-    This website is made with <i class="fa fa-heart"></i> by the Hot Rails
+    Le Wagon project made with <i class="fa fa-heart"></i> by the Hot Rails
   </div>
 </div>
 
