fixed color changing on edit page

--- a/app/assets/stylesheets/messages/_index.scss
+++ b/app/assets/stylesheets/messages/_index.scss
@@ -5,7 +5,7 @@
   background-color: #3d3d3d;
 }
 
-input, textarea.form-control {
+textarea.message-area {
   background-color : #e2e2e2;
   border: grey;
 }
