--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -26,7 +26,7 @@
 
   <%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
     <div class="field">
-      <%= f.text_area :body, class: "form-control" %>
+      <%= f.text_area :body, class: "form-control message-area" %>
     </div>
       <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
     <div>
