--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -79,12 +79,13 @@
 
 
   <div class="flybox-wrap" id="off">
-    <div class="card scrollable date-card">
+    <div class="card date-card">
       <div id="menu">
         <div class="bars">
           <div id="name-bar">
             <h2>Bar name</h2>
             <h3>Bar address</h3>
+            <%= image_tag "scroll-down.png", height: 30 %>
           </div>
           <div id="description-bar">
             <p>
@@ -102,6 +103,7 @@
           <div id="name-bar">
             <h2>Bar name</h2>
             <h3>Bar address</h3>
+           <%= image_tag "scroll-down.png", height: 30 %>
           </div>
            <div id="description-bar">
             <p>
@@ -119,6 +121,7 @@
          <div id="name-bar">
             <h2>Bar name</h2>
             <h3>Bar address</h3>
+           <%= image_tag "scroll-down.png", height: 30 %>
           </div>
           <div id="description-bar">
             <p>
