--- a/app/assets/stylesheets/users/_profile.scss
+++ b/app/assets/stylesheets/users/_profile.scss
@@ -153,13 +153,13 @@
   box-shadow: 0 0 5px rgba(37, 37, 37, 0.4);
   height: 30%;
   margin-bottom: 15px;
-  padding: 7px;
-  padding-left: 10px;
+  padding: 10px 10px 0px 10px;
+
   border-radius: 3px;
 }
 
 .truncate{
-    white-space: nowrap;
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
