--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_request.bar_id).name %>
-            <br/><%= link_to "View bar", "/matches/#{rdv_request.match_id}" %>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
             <%= link_to "Accept Date", accept_rdv_path(rdv_request), class: "btn btn-primary btn-accept" %>
         </li>
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="tab-content" id="tab-2">
+    <div class="tab-content" id="tab-2">x
        <!--  <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
       <ul class="inbox">
       <% @rdvs_done.each do |rdv_done| %>
@@ -46,7 +46,7 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_done.bar_id).name %>
-            <br/><%= link_to "View bar", "/matches/#{rdv_done.match_id}" %>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
 
 
@@ -62,7 +62,7 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_done.bar_id).name %>
-            <br/><%= link_to "View bar", "/matches/#{rdv_done.match_id}" %>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
 
           <% end %>
@@ -75,8 +75,7 @@
       <% end %>
     </ul>
     </div>
-  </div>
-</div>
 
+  </div>
 
 
