--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class="tab-content" id="tab-2">x
+    <div class="tab-content" id="tab-2">
        <!--  <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
       <ul class="inbox">
       <% @rdvs_done.each do |rdv_done| %>
