--- a/app/views/bars/_show.html.erb
+++ b/app/views/bars/_show.html.erb
@@ -1,21 +1,16 @@
 <% markers = bar.build_markers %>
-<% binding.pry %>
 
-<div id="map" style="width: 95%; height: 30vh; margin-top: 5px; margin-bottom: 20px;"></div>
+<% dom_map_id = "map#{map_id}" %>
+
+
+<div id="<%= dom_map_id %>" style="width: 95%; height: 30vh; margin-top: 5px; margin-bottom: 20px;"></div>
+
 
 <% content_for(:after_js) do %>
   <%= javascript_tag do %>
-    var handler = Gmaps.build('Google');
-    handler.buildMap({ internal: { id: 'map' } }, function() {
-      markers = handler.addMarkers(<%= raw markers.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-      if (markers.length == 0) {
-        handler.getMap().setZoom(2);
-      } else if (markers.length == 1) {
-        handler.getMap().setZoom(14);
-      }
-    });
+    // drawMap(selectorDom, markerJson)
+    drawMap("<%= dom_map_id %>", <%= raw markers.to_json %>);
   <% end %>
 <% end %>
+
 
