--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -84,7 +84,7 @@
   <div class="flybox-wrap" id="off">
     <div class="card date-card">
       <div id="menu">
-          <% @match.bars.first(3).each do |bar| %>
+          <% @match.bars.first(3).each_with_index do |bar, index| %>
         <div class="bars">
           <div id="name-bar">
             <h2><%= bar.name %></h2>
@@ -95,7 +95,7 @@
             <p>
               <%= bar.description %>
             </p>
-            <%= render partial: 'bars/show', locals: {bar: bar } %>
+            <%= render partial: 'bars/show', locals: {bar: bar, map_id: index + 1} %>
             <% if @match.asker.nil? %>
               <%= link_to "Ask out!", class: "btn-date"%>
             <% else %>
