--- a/app/assets/stylesheets/matches/_show.css
+++ b/app/assets/stylesheets/matches/_show.css
@@ -25,6 +25,9 @@
     transition: all $animation-time ease;
     transition-delay: 0;
   }
+  &:last-child {
+    padding-bottom: 0;
+  }
 }
 
 .show-map {
@@ -105,7 +108,7 @@
       padding-top: 15px;
       padding-right: 6px;
       padding-left: 4px;
-      padding-bottom: 5%;
+      padding-bottom: 2%;
     }
   }
 
@@ -133,13 +136,13 @@
 .container-match-show {
   position: relative;
   overflow: hidden;
-  height: 86vh;
+  height: 95vh;
   width: calc(100vw - 17%);
   background: $grey-back;
   display: flex;
   align-items: center;
   margin-left: 17%;
-  margin-top: 7vh;
+  margin-top: 2vh;
 }
 .flybox-wrap {
   position: absolute;
@@ -212,7 +215,7 @@
   background-color: $grey-card;
   padding: 4px;
   border-radius: 5px;
-  height: 86vh;
+  height: 95vh;
   text-align: center;
   box-shadow: 0 0 8px rgba(37, 37, 37, 0.4);
   p {
