--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -86,7 +86,7 @@
       <div id="menu">
           <% @match.bars.first(3).each_with_index do |bar, index| %>
         <div class="bars">
-          <div id="name-bar">
+          <div id="name-bar" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 50%), url('<%= cl_image_path bar.photo %>'); background-size: cover;">
             <h2><%= bar.name %></h2>
             <h3><%= bar.address %></h3>
             <%= image_tag "scroll-down.png", height: 30 %>
@@ -95,12 +95,8 @@
             <p>
               <%= bar.description %>
             </p>
-            <%= render partial: 'bars/show', locals: {bar: bar, map_id: index + 1} %>
-            <% if @match.asker.nil? %>
               <%= link_to "Ask out!", class: "btn-date"%>
-            <% else %>
-              <%= link_to "Ask out!", match_path(@match, {match:{receiver: @user.id}}), method: :put, class: "btn-date" %>
-            <% end %>
+              <%= render partial: 'bars/show', locals: {bar: bar, map_id: index + 1} %>
           </div>
         </div>
           <% end  %>
