--- a/app/assets/stylesheets/messages/_index.scss
+++ b/app/assets/stylesheets/messages/_index.scss
@@ -5,6 +5,17 @@
   background-color: #3d3d3d;
 }
 
+.message-btns {
+  display: flex;
+  align-items: center;
+  a {
+    color: $white-font;
+  }
+  p {
+    margin: auto 10px;
+  }
+}
+
 textarea.message-area {
   background-color : #e2e2e2;
   border: grey;
