--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -9,7 +9,7 @@
     <div class="tab-content is-active" id="tab-1">
       <!-- <div class="col-xs-12 col-sm-10 col-sm-offset-1"> -->
       <ul class="inbox">
-        <% if @rdv_requests.nil? %>
+        <% if @rdvs_requests.nil? %>
           <h4>You have no date requests at the moment</h4>
         <% end %>
       <% @rdvs_requests.each do |rdv_request| %>
