--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -84,7 +84,7 @@
   <div class="flybox-wrap" id="off">
     <div class="card date-card">
       <div id="menu">
-          <% @match.bars.first(3).each_with_index do |bar, index| %>
+          <% @match.bars.uniq.first(3).each_with_index do |bar, index| %>
         <div class="bars">
           <div id="name-bar" style="background-image: linear-gradient(-225deg, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.7) 50%), url('<%= cl_image_path bar.photo %>'); background-size: cover;">
             <h2><%= bar.name %></h2>
