--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -21,7 +21,7 @@
   </div>
     <!-- This is the hidden "more info" card-->
   <div class="flybox-wrap" id="off">
-    <div class="card" >
+    <div class="card scrollable" >
 <!--       <div class="animated fadeInRight">
       <div class="card scrollable hidden" id="more-info"> -->
       <% if user.description.present? %>
@@ -98,7 +98,6 @@
                   </div>
                 <% end %>
               </div>
-              <a href="#" id="show-full-list">Show all</a>
             <% end %>
           <% end %>
         <div class="date-btns">
