--- a/app/assets/stylesheets/matches/_show.css
+++ b/app/assets/stylesheets/matches/_show.css
@@ -352,4 +352,10 @@ body{
 
 .scrollable {
   overflow-y: scroll;
+  overflow-x: hidden;
+  &::-webkit-scrollbar { width: 3px; height: 5px; }
+  &::-webkit-scrollbar-track-piece { background-color: $grey-card; }
+  &::-webkit-scrollbar-thumb { background-color: #777777; }
 }
+
+
