--- a/app/views/bars/_show.html.erb
+++ b/app/views/bars/_show.html.erb
@@ -3,7 +3,7 @@
 <% dom_map_id = "map#{map_id}" %>
 
 
-<div id="<%= dom_map_id %>" style="width: 95%; height: 30vh; margin-top: 12px; margin-bottom: 20px;"></div>
+<div id="<%= dom_map_id %>" style="width: 95%; height: 30vh; margin-top: 12px; margin-bottom: 20px; opacity: 0.6"></div>
 
 
 <% content_for(:after_js) do %>
