Revert "a poor pop up to show a bar"

--- a/app/views/rdvs/index.html.erb
+++ b/app/views/rdvs/index.html.erb
@@ -24,19 +24,10 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_request.bar_id).name %>
-            <br/><div class="linktbar"><p>View bar</p></div>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
             <%= link_to "Accept", accept_rdv_path(rdv_request), class: "btn btn-primary btn-accept" %>
         </li>
-
-      <div class="pop-up">
-        <span>x</span>
-        <div class="pop-up-text">
-        <% @bar = Bar.find(rdv_request.bar_id)%>
-        <%= render "shared/show_bar" %>
-      </div>
-    </div>
-
       <% end %>
     </ul>
     </div>
@@ -60,7 +51,7 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_done.bar_id).name %>
-            <br/><div class="linktbar"><p>View bar</p> </div>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
 
 
@@ -76,7 +67,7 @@
           </div>
           <div class="message-bar">
             <%= Bar.find(rdv_done.bar_id).name %>
-            <br/><div class="linktbar"><p>View bar</p> </div>
+            <br/><%= link_to "View bar", "#", onclick: "triggerInTwo()" %>
           </div>
 
           <% end %>
@@ -84,19 +75,12 @@
 
             <%= link_to "Send message", conversation_messages_path(rdv_done.conversation), class: "btn btn-primary btn-accept" %>
 
-        </li>
 
-      <div class="pop-up">
-        <span>x</span>
-        <div class="pop-up-text">
-        <% @bar = Bar.find(rdv_done.bar_id)%>
-        <%= render "shared/show_bar" %>
-      </div>
+        </li>
+      <% end %>
+    </ul>
     </div>
 
-    <% end %>
-  </ul>
-</div>
-
+  </div>
 
 
