--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -10,6 +10,7 @@
   color: rgb(255, 255, 255);
   opacity: 0.8;
   margin-bottom: 30px;
+  font-family: "Quicksand", sans-serif
 }
 .content-banner {
   z-index: 2;
