--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Oxygen:300,400,700|Quicksand:300,400,500,700&subset=latin-ext');
 // Define fonts for body and headers
 $body-font: "Oxygen", sans-serif;
-$headers-font: "Quicksand", sans-serif;
+$headers-font: "Oxygen", sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
