--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -3,6 +3,7 @@
 // Define fonts for body and headers
 $body-font: "Oxygen", sans-serif;
 $headers-font: "Oxygen", sans-serif;
+$home-font: "Quicksand", sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
