--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -103,6 +103,7 @@ figure.snip1477 h4 {
   background-color: $grey-back;
   padding: 5px 10px;
   color: #eee;
+  font-family: $home-font;
 }
 figure.snip1477 figcaption {
   position: absolute;
